--- a/.gitignore
+++ b/.gitignore
@@ -16,14 +16,11 @@
 # production
 /build
 
-# misc
-.DS_Store
-*.pem
-
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
 # local env files
 .env*.local
@@ -34,3 +31,25 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# IDEs / Editors
+.vscode/
+.idea/
+
+# Temporary exports
+*.log
+
+# Mac Spotlight
+.Spotlight-V100
+
+# Windows recycle
+$RECYCLE.BIN/
+
+# misc
+.DS_Store
+*.pem
+/coverage
